# NoteLuoto

./: .gitmodules  api-1.0.6.yaml
AI_module/: langchain_pb2.py  langchain_pb2_grpc.py  server.py  sync_pb2.py  sync_pb2_grpc.py
AI_module/protos/: langchain.proto
AI_module_with_Dockerfile/: Dockerfile
AI_module_with_Dockerfile/AI_module/: AI_module.py  config.json  langchain_pb2.py  langchain_pb2_grpc.py  requirements.txt  sync_pb2.py  sync_pb2_grpc.py  tag_recommender_pb2.py  tag_recommender_pb2_grpc.py
AI_module_with_Dockerfile/AI_module/protos/: langchain.proto  sync.proto  tag_recommender.proto
backend/: CMakeLists.txt  Makefile  docker-compose.yml
backend/attachments/: test.txt
backend/configs/: config_vars.docker.yaml  config_vars.testing.yaml  config_vars.yaml  static_config.yaml
backend/postgresql/data/: initial_data.sql
backend/postgresql/schemas/: db_1.sql
backend/proto/handlers/: ai.proto  langchain.proto  sync.proto  tag_recommender.proto
backend/src/: main.cpp
backend/src/api/auth/: auth_bearer.cpp  auth_bearer.hpp
backend/src/api/handlers/: ai_answer.cpp  ai_answer.hpp  attachment.cpp  attachment.hpp  checklist.cpp  checklist.hpp  checklist_item.cpp  checklist_item.hpp  create_note.cpp  create_note.hpp  history.cpp  history.hpp  login.cpp  login.hpp  note.cpp  note.hpp  notes.cpp  notes.hpp  notes_id.cpp  notes_id.hpp  register.cpp  register.hpp  suggest.cpp  suggest.hpp  tag.cpp  tag.hpp  tags_all.cpp  tags_all.hpp  tags_create.cpp  tags_create.hpp  tags_note.cpp  tags_note.hpp  tags_note_tag.cpp  tags_note_tag.hpp
backend/src/db/: sql.hpp
backend/src/dto/: attachment.cpp  checklist.cpp  history.cpp  history.hpp  item.cpp  item.hpp  note.cpp  search_params.cpp
backend/src/grpc_clients/: grpc_langchain_client.cpp  grpc_langchain_client.hpp  grpc_tag_recommender_client.cpp  grpc_tag_recommender_client.hpp
backend/src/models/: checklist.cpp  checklist.hpp
backend/src/search_service/strategies/: semantic_search.cpp
backend/src/utils/: data_to_text_formatter.cpp  data_to_text_formatter.hpp  filename_generator.hpp  grpc_client.hpp  make_errors.cpp  make_errors.hpp
backend/tests/: conftest.py  test_all_tags.py  test_checklist_create_item.py  test_checklist_delete_item.py  test_checklist_put_item.py  test_create_note.py  test_create_tag.py  test_get_one_note.py  test_history.py  test_login.py  test_note_add_checklist.py  test_note_add_tag.py  test_note_delete_tag.py  test_note_tags.py  test_patch_note.py  test_register.py
backend/tests/test_suggest/: test_suggest_queries.py  test_suggest_tags.py
backend/tests/tests_ai_answer/: test_ai_answer.py
backend/tests/tests_attachment/: test_add_attachment.py  test_delete_attachment.py  test_get_attachment.py
backend/tests/tests_auth/: test_login.py  test_register.py
backend/tests/tests_checklist/: test_delete_checklist.py  test_get_checklist.py  test_note_add_checklist.py  test_patch_checklist.py
backend/tests/tests_checklist_item/: test_checklist_create_item.py  test_checklist_delete_item.py  test_checklist_patch_item.py
backend/tests/tests_history/: test_history.py
backend/tests/tests_note/: test_create_note.py  test_delete_note.py  test_get_all_note.py  test_get_one_note.py  test_patch_note.py
backend/tests/tests_tag/: test_all_tags.py  test_create_tag.py  test_note_add_tag.py  test_note_delete_tag.py  test_note_tags.py
frontend/: api-1.0.6.yaml  package-lock.json  package.json  tailwind.config.ts
frontend/app/: app.css  routes.ts
frontend/app/mocks/: handlers.ts
frontend/app/routes/: all-notes.tsx  chat.tsx  home.tsx  note.tsx  sign-up.tsx
frontend/entities/note/: index.ts
frontend/entities/note/ui/: NoteListItem.tsx
frontend/pages/all-notes/: index.ts
frontend/pages/all-notes/api/: notes.ts
frontend/pages/all-notes/ui/: AllNotesPage.tsx  Pagination.tsx
frontend/pages/chat/api/: chat.ts
frontend/pages/chat/ui/: ChatPage.tsx
frontend/pages/home/api/: home.ts
frontend/pages/home/ui/: HomePage.tsx
frontend/pages/note/: index.ts
frontend/pages/note/api/: attachment.ts  checklist.ts  note.ts  tag.ts
frontend/pages/note/ui/: NotePage.tsx  TagModal.tsx
frontend/pages/sign-in/ui/: SignInPage.tsx
frontend/shared/api/: client.ts  index.ts  models.ts  v1.d.ts
frontend/shared/auth/: auth.ts  index.ts
(+3 files in other folders)
